--- a/src/assets/json/projects.json
+++ b/src/assets/json/projects.json
@@ -174,14 +174,14 @@
                                     "width": 156,
                                     "height": 156,
                                     "size": 6.84,
-                                    "url": "https://afluex.com/afluexit/images/services/hospital_bg.png"
+                                    "url": "https://terotam.com/wp-content/uploads/2021/10/Hospital-Management-Solution.png"
                                 }
                             },
                             "hash": "hrm_7390600_f47bb27299",
                             "ext": ".png",
                             "mime": "image/png",
                             "size": 1.65,
-                            "url": "https://afluex.com/afluexit/images/services/hospital_bg.png",
+                            "url": "https://terotam.com/wp-content/uploads/2021/10/Hospital-Management-Solution.png",
                             "previewUrl": null,
                             "provider": "aws-s3",
                             "provider_metadata": null,
