--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "dev:ssr": "ng run client:serve-ssr",
     "serve:ssr": "node dist/client/server/main.js",
     "build:ssr": "ng build && ng run client:server",
-    "prerender": "ng run client:prerender"
+    "prerender": "ng run client:prerender", 
+    "build": "ng build --configuration=production && cp src/_redirects dist/client/browser/_redirects"
   },
   "private": true,
   "dependencies": {
